pingpong/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: pingpong-dep
  namespace: exercises
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pingpong
  strategy:
    canary:
      steps:
        - setWeight: 25
        - pause:
            duration: 30s
        - setWeight: 50
        - pause:
            duration: 30s
        - analysis:
            templates:
              - templateName: cpu-usage
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: aljazkovac/pingpong:v442
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "16Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 9000
          livenessProbe:
            initialDelaySeconds: 20 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 9000
