pingpong/manifests/knative-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: ping-pong-serverless
  namespace: exercises
spec:
  template:
    spec:
      containers:
        - image: aljazkovac/pingpong:v442
          ports:
            - containerPort: 8080
          env:
            - name: POSTGRES_HOST
              value: "postgres-svc"
            - name: POSTGRES_PORT
              value: "5432"
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  name: postgres-secret
                  key: POSTGRES_DB
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  name: postgres-secret
                  key: POSTGRES_USER
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  name: postgres-secret
                  key: POSTGRES_PASSWORD
