pingpong/manifests/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: LoadBalancer
  selector:
    app: pingpong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9000
